Matilda.cs.ATG
COMPILER Matilda

  public Stmt mainNode = null;

  public bool hasErrors() {
    return errors.count > 0;
  }

  private Stmt toComp(List<Stmt> stmts) {
    if (!stmts.Any()) {
      return Skip.Instance;
    }

    Stmt result = stmts.Last();

    return result;
  }

CHARACTERS
  letter = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz".
  digit = "0123456789".
  cr  = '\r'.
  lf  = '\n'.
  tab = '\t'.

TOKENS
  IDENT = ("_" | letter) {letter | digit | "_"}.
  NUMBER = digit {digit}.

COMMENTS FROM "/*" TO "*/" NESTED
COMMENTS FROM "//" TO lf

IGNORE cr + lf + tab

PRODUCTIONS

Matilda = Stmts<out mainNode> .

/*-------------------------------------------------------*/
Stmts<out Stmt stmt> =    (. List<Stmt> list = new List<Stmt>(); .)
  {
    Stmt<out Stmt temp>   (. list.Add(temp); .)
  }                       (. stmt = toComp(list); .)
.

Stmt<out Stmt stmt> =       (. stmt = Skip.Instance; .)
  (
    Declaration<out stmt>
    | Print<out stmt>
  )
.

Declaration<out Stmt stmt> = 
  Type<out Type type>
  IDENT                 (. string var = t.val; stmt = new Declaration(type, var, t.line); .)
  '='                   (. int lineNumber = t.line; .)
  Expr<out Expr expr>   (. stmt = new Comp(stmt, new Assign(var, expr, lineNumber)); .)
  ';'
.

Print<out Stmt stmt> = 
  "print"             (. int lineNumber = t.line; .)
  Expr<out Expr expr> (. stmt = new Print(expr, lineNumber); .)
  ';'
.

Type<out Type type> (. type = null; .)
  =
  "int"             (. type = IntT.Instance; .)
  | "float"         (. type = FloatT.Instance; .)
  | "bool"          (. type = BoolT.Instance; .)
  | "string"        (. type = StringT.Instance; .)
.

Expr<out Expr expr> = 
  Term<out expr>
  {
    '+'                   (. int lineNumber = t.line; .)
    Term<out Expr expr2>  (. expr = new BinaryOp(BinaryOperators.ADD, expr, expr2, lineNumber); .)
  }
.

Term<out Expr expr>     (. expr = null; .)
  =
  IDENT                 (. expr = new Ref(t.val, t.line); .)
  | NUMBER              (. expr = new IntV(Int32.Parse(t.val), t.line); .)
  | "true"              (. expr = new BoolV(true, t.line); .)
  | "false"             (. expr = new BoolV(false, t.line); .)
.

END Matilda.
